<package>
  <name>button</name>
  <version>1.0.0</version>
  <description>button</description>
  <maintainer email="navid102@gmail.com">Navid Shahrestani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/button</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Navid Shahrestani</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>legacy_vision</build_depend>
  <build_depend>uf_common</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>legacy_vision</run_depend>
  <run_depend>uf_common</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>legacy_vision</test_depend> -->
  <!-- <test_depend>uf_common</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

</package>