<package>
  <name>laser_tf_py</name>
  <version>1.0.0</version>
  <description>laser_tf_py</description>
  <maintainer email="will.rolke@gmail.com">Will Rolke</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/laser_tf_py</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Will Rolke</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lms1xx</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>lms1xx</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>