<package>
  <name>lidar_object_publisher</name>
  <version>1.0.0</version>
  <description>lidar_object_publisher</description>
  <maintainer email="will.rolke@gmail.com">Will Rolke</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/lidar_object_publisher</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Will Rolke</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pointcloud_publisher</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pointcloud_publisher</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pointcloud_publisher</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->

</package>